package model.list;

public enum MediaType {
	Nothing,
	Audio,
	Video,
	Sublist
}
