@startuml
package model {
    package list {
        interface IMedia {
            int getDuration()
            String getName()
            String getPath()
            String getInfos()
            void setDuration(int duration)
            void setName(String name)
            void setPath(String path)
        }
        abstract class Media implements IMedia {
            private int duration
            private String name
            private String path
        }
        class Audio extends Media {
            private String artist
            public String getArtist()
            public void setArtist(String artist)
        }
        class Video extends Media {
            private String resolution
            public String getResolution()
            public void setResolution(String resolution)
        }
        class SubList extends Media {
            public List<IMedia> getContains()
            public IMedia getChild(int num)
            public void setContains(List<IMedia> contains)
            public void add(IMedia list)
            public void remove(IMedia list)
        }
        SubList o--> "0..*" IMedia : contains
        enum MediaType {
            Nothing,
            Audio,
            Video,
            Sublist
        }
        interface IListBuilder {
            Playlist getPlaylist()
            void startSublist()
            void stopSublist()
            void startAudio()
            void stopAudio()
            void startVideo()
            void stopVideo()
            void addName(String name)
            void addPath(String path)
        }
        class StdListBuilder implements IListBuilder {
            private final String absolutePath
            private String path
            private int depthList
            private final List<String> subListsName
        }
        StdListBuilder ..> Playlist : playlist
        StdListBuilder ..> MediaType : type
        StdListBuilder ..> "0..*" IMedia : subListMedias
    }
    package playlist {
        interface IPlaylist {
            SubList getPlaylist()
            String getName()
            void setPlaylist(SubList playlist)
            void setName(String name)
            void addList(List<IMedia> list)
            void addFile(IMedia media)
        }
        class Playlist implements IPlaylist {
            private String name
        }
        Playlist ..> "0..*" SubList : playlist

        interface IPlaylistManager {
            Playlist getPlaylist()
            IListBuilder getBuilder()
            void load(File f)
            void save()
            void setPlaylist(Playlist playlist)
            void setBuilder(IListBuilder builder)
        }
        abstract class PlaylistManager implements IPlaylistManager {
        }
        PlaylistManager ..> IListBuilder : builder
    }
    package util {
        interface LoadFiles {
            IMedia loadFile(String path)
        }
        class LoadAudio implements LoadFiles {
        }
        class LoadVideo implements LoadFiles {
        }
    }
    package xml {
        class XMLPlaylistManager extends PlaylistManager {
    	}
    	class XPLPlaylistHandler extends DefaultHandler {
            int sublist
            boolean audio
            boolean video
            public void startElement(String uri, String localName, String qName, Attributes attributes)
        	public void endElement(String uri, String localName, String qName)
        	public void characters(char[] data, int start, int length)
        }
        XMLPlaylistManager ..> IListBuilder : builder
    }
}
@enduml